--- a/personal-portfolio-tutorial/src/App.css
+++ b/personal-portfolio-tutorial/src/App.css
@@ -1,4 +1,7 @@
-/************ Custom Font ************/
+/*************************************************** Custom Font ***************************************************/
+
+
+
 @font-face {
 	font-family: Centra;
 	src: url('./assets/font/CentraNo2-Bold.ttf');
@@ -15,7 +18,12 @@
 	font-weight: 400;
 }
 
-/************ Default Css ************/
+
+
+/*************************************************** Default Css ***************************************************/
+
+
+
 * {
   margin: 0;
   padding: 0;
@@ -81,7 +89,13 @@ p.success {
 p.danger {
 	color: red;
 }
-/************ Navbar Css ************/
+
+
+
+/*************************************************** Navbar Css ***************************************************/
+
+
+
 nav.navbar {
   padding: 18px 0;
   position: fixed;
@@ -231,7 +245,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 	border-color: transparent;
 }
 
-/************ Banner Css ************/
+
+
+/*************************************************** Banner Css ***************************************************/
+
+
+
 .banner {
   margin-top: 0;
   padding: 260px 0 100px 0;
@@ -301,7 +320,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-right: 0.08em solid #666;
 }
 
-/************ Skills Css ************/
+
+
+/*************************************************** Skills Css ***************************************************/
+
+
+
 .skill {
   padding: 0 0 50px 0;
   position: relative;
